Assignment3/src/Parser/parser.output
   0  $accept : %entry% $end

   1  main : comlist EOL

   2  comlist : com COMP comlist
   3          | combr comlist
   4          | com COMP
   5          | com
   6          | combr COMP comlist
   7          | combr COMP

   8  com : WHILE LPAREN exp RPAREN com
   9      | FOR LPAREN exp RPAREN com
  10      | IF LPAREN exp RPAREN com ELSE com
  11      | IF LPAREN exp RPAREN combr ELSE com
  12      | VAR ASSG exp
  13      | SKIP
  14      | INT VAR
  15      | BOOL VAR

  16  combr : LBRACE comlist RBRACE
  17        | WHILE LPAREN exp RPAREN combr
  18        | FOR LPAREN exp RPAREN combr
  19        | IF LPAREN exp RPAREN com ELSE combr
  20        | IF LPAREN exp RPAREN combr ELSE combr

  21  exp : VAR
  22      | NUMBER
  23      | LPAREN exp RPAREN
  24      | exp PLUS exp
  25      | exp MINUS exp
  26      | exp TIMES exp
  27      | exp DIV exp
  28      | exp MOD exp
  29      | MINUS exp
  30      | exp EQ exp
  31      | exp LEQ exp
  32      | exp LT exp
  33      | exp GEQ exp
  34      | exp GT exp
  35      | LPAREN exp RPAREN
  36      | NOT exp
  37      | exp AND exp
  38      | exp OR exp
  39      | TRUE
  40      | FALSE

  41  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (41)

	LBRACE  shift 3
	SKIP  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	VAR  shift 8
	INT  shift 9
	BOOL  shift 10
	.  error

	main  goto 11
	comlist  goto 12
	com  goto 13
	combr  goto 14


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	combr : LBRACE . comlist RBRACE  (16)

	LBRACE  shift 3
	SKIP  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	VAR  shift 8
	INT  shift 9
	BOOL  shift 10
	.  error

	comlist  goto 15
	com  goto 13
	combr  goto 14


state 4
	com : SKIP .  (13)

	.  reduce 13


state 5
	com : IF . LPAREN exp RPAREN com ELSE com  (10)
	com : IF . LPAREN exp RPAREN combr ELSE com  (11)
	combr : IF . LPAREN exp RPAREN com ELSE combr  (19)
	combr : IF . LPAREN exp RPAREN combr ELSE combr  (20)

	LPAREN  shift 16
	.  error


state 6
	com : WHILE . LPAREN exp RPAREN com  (8)
	combr : WHILE . LPAREN exp RPAREN combr  (17)

	LPAREN  shift 17
	.  error


state 7
	com : FOR . LPAREN exp RPAREN com  (9)
	combr : FOR . LPAREN exp RPAREN combr  (18)

	LPAREN  shift 18
	.  error


state 8
	com : VAR . ASSG exp  (12)

	ASSG  shift 19
	.  error


state 9
	com : INT . VAR  (14)

	VAR  shift 20
	.  error


state 10
	com : BOOL . VAR  (15)

	VAR  shift 21
	.  error


state 11
	%entry% : '\001' main .  (41)

	.  reduce 41


state 12
	main : comlist . EOL  (1)

	EOL  shift 22
	.  error


state 13
	comlist : com . COMP comlist  (2)
	comlist : com . COMP  (4)
	comlist : com .  (5)

	COMP  shift 23
	RBRACE  reduce 5
	EOL  reduce 5


state 14
	comlist : combr . comlist  (3)
	comlist : combr . COMP comlist  (6)
	comlist : combr . COMP  (7)

	LBRACE  shift 3
	COMP  shift 24
	SKIP  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	VAR  shift 8
	INT  shift 9
	BOOL  shift 10
	.  error

	comlist  goto 25
	com  goto 13
	combr  goto 14


state 15
	combr : LBRACE comlist . RBRACE  (16)

	RBRACE  shift 26
	.  error


state 16
	com : IF LPAREN . exp RPAREN com ELSE com  (10)
	com : IF LPAREN . exp RPAREN combr ELSE com  (11)
	combr : IF LPAREN . exp RPAREN com ELSE combr  (19)
	combr : IF LPAREN . exp RPAREN combr ELSE combr  (20)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 34


state 17
	com : WHILE LPAREN . exp RPAREN com  (8)
	combr : WHILE LPAREN . exp RPAREN combr  (17)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 35


state 18
	com : FOR LPAREN . exp RPAREN com  (9)
	combr : FOR LPAREN . exp RPAREN combr  (18)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 36


state 19
	com : VAR ASSG . exp  (12)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 37


state 20
	com : INT VAR .  (14)

	.  reduce 14


state 21
	com : BOOL VAR .  (15)

	.  reduce 15


state 22
	main : comlist EOL .  (1)

	.  reduce 1


state 23
	comlist : com COMP . comlist  (2)
	comlist : com COMP .  (4)

	LBRACE  shift 3
	SKIP  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	VAR  shift 8
	INT  shift 9
	BOOL  shift 10
	RBRACE  reduce 4
	EOL  reduce 4

	comlist  goto 38
	com  goto 13
	combr  goto 14


state 24
	comlist : combr COMP . comlist  (6)
	comlist : combr COMP .  (7)

	LBRACE  shift 3
	SKIP  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	VAR  shift 8
	INT  shift 9
	BOOL  shift 10
	RBRACE  reduce 7
	EOL  reduce 7

	comlist  goto 39
	com  goto 13
	combr  goto 14


state 25
	comlist : combr comlist .  (3)

	.  reduce 3


state 26
	combr : LBRACE comlist RBRACE .  (16)

	.  reduce 16


state 27
	exp : TRUE .  (39)

	.  reduce 39


state 28
	exp : FALSE .  (40)

	.  reduce 40


state 29
	exp : NOT . exp  (36)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 40


state 30
	exp : MINUS . exp  (29)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 41


state 31
	exp : LPAREN . exp RPAREN  (23)
	exp : LPAREN . exp RPAREN  (35)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 42


state 32
	exp : VAR .  (21)

	.  reduce 21


state 33
	exp : NUMBER .  (22)

	.  reduce 22


state 34
	com : IF LPAREN exp . RPAREN com ELSE com  (10)
	com : IF LPAREN exp . RPAREN combr ELSE com  (11)
	combr : IF LPAREN exp . RPAREN com ELSE combr  (19)
	combr : IF LPAREN exp . RPAREN combr ELSE combr  (20)
	exp : exp . PLUS exp  (24)
	exp : exp . MINUS exp  (25)
	exp : exp . TIMES exp  (26)
	exp : exp . DIV exp  (27)
	exp : exp . MOD exp  (28)
	exp : exp . EQ exp  (30)
	exp : exp . LEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . GEQ exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . AND exp  (37)
	exp : exp . OR exp  (38)

	AND  shift 43
	OR  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIV  shift 48
	MOD  shift 49
	EQ  shift 50
	LEQ  shift 51
	LT  shift 52
	GEQ  shift 53
	GT  shift 54
	RPAREN  shift 55
	.  error


state 35
	com : WHILE LPAREN exp . RPAREN com  (8)
	combr : WHILE LPAREN exp . RPAREN combr  (17)
	exp : exp . PLUS exp  (24)
	exp : exp . MINUS exp  (25)
	exp : exp . TIMES exp  (26)
	exp : exp . DIV exp  (27)
	exp : exp . MOD exp  (28)
	exp : exp . EQ exp  (30)
	exp : exp . LEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . GEQ exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . AND exp  (37)
	exp : exp . OR exp  (38)

	AND  shift 43
	OR  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIV  shift 48
	MOD  shift 49
	EQ  shift 50
	LEQ  shift 51
	LT  shift 52
	GEQ  shift 53
	GT  shift 54
	RPAREN  shift 56
	.  error


state 36
	com : FOR LPAREN exp . RPAREN com  (9)
	combr : FOR LPAREN exp . RPAREN combr  (18)
	exp : exp . PLUS exp  (24)
	exp : exp . MINUS exp  (25)
	exp : exp . TIMES exp  (26)
	exp : exp . DIV exp  (27)
	exp : exp . MOD exp  (28)
	exp : exp . EQ exp  (30)
	exp : exp . LEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . GEQ exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . AND exp  (37)
	exp : exp . OR exp  (38)

	AND  shift 43
	OR  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIV  shift 48
	MOD  shift 49
	EQ  shift 50
	LEQ  shift 51
	LT  shift 52
	GEQ  shift 53
	GT  shift 54
	RPAREN  shift 57
	.  error


state 37
	com : VAR ASSG exp .  (12)
	exp : exp . PLUS exp  (24)
	exp : exp . MINUS exp  (25)
	exp : exp . TIMES exp  (26)
	exp : exp . DIV exp  (27)
	exp : exp . MOD exp  (28)
	exp : exp . EQ exp  (30)
	exp : exp . LEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . GEQ exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . AND exp  (37)
	exp : exp . OR exp  (38)

	AND  shift 43
	OR  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIV  shift 48
	MOD  shift 49
	EQ  shift 50
	LEQ  shift 51
	LT  shift 52
	GEQ  shift 53
	GT  shift 54
	RBRACE  reduce 12
	COMP  reduce 12
	ELSE  reduce 12
	EOL  reduce 12


state 38
	comlist : com COMP comlist .  (2)

	.  reduce 2


state 39
	comlist : combr COMP comlist .  (6)

	.  reduce 6


state 40
	exp : exp . PLUS exp  (24)
	exp : exp . MINUS exp  (25)
	exp : exp . TIMES exp  (26)
	exp : exp . DIV exp  (27)
	exp : exp . MOD exp  (28)
	exp : exp . EQ exp  (30)
	exp : exp . LEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . GEQ exp  (33)
	exp : exp . GT exp  (34)
	exp : NOT exp .  (36)
	exp : exp . AND exp  (37)
	exp : exp . OR exp  (38)

	.  reduce 36


state 41
	exp : exp . PLUS exp  (24)
	exp : exp . MINUS exp  (25)
	exp : exp . TIMES exp  (26)
	exp : exp . DIV exp  (27)
	exp : exp . MOD exp  (28)
	exp : MINUS exp .  (29)
	exp : exp . EQ exp  (30)
	exp : exp . LEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . GEQ exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . AND exp  (37)
	exp : exp . OR exp  (38)

	AND  shift 43
	OR  shift 44
	TIMES  shift 47
	DIV  shift 48
	PLUS  reduce 29
	MINUS  reduce 29
	MOD  reduce 29
	EQ  reduce 29
	LEQ  reduce 29
	LT  reduce 29
	GEQ  reduce 29
	GT  reduce 29
	RPAREN  reduce 29
	RBRACE  reduce 29
	COMP  reduce 29
	ELSE  reduce 29
	EOL  reduce 29


state 42
	exp : LPAREN exp . RPAREN  (23)
	exp : exp . PLUS exp  (24)
	exp : exp . MINUS exp  (25)
	exp : exp . TIMES exp  (26)
	exp : exp . DIV exp  (27)
	exp : exp . MOD exp  (28)
	exp : exp . EQ exp  (30)
	exp : exp . LEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . GEQ exp  (33)
	exp : exp . GT exp  (34)
	exp : LPAREN exp . RPAREN  (35)
	exp : exp . AND exp  (37)
	exp : exp . OR exp  (38)

	AND  shift 43
	OR  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIV  shift 48
	MOD  shift 49
	EQ  shift 50
	LEQ  shift 51
	LT  shift 52
	GEQ  shift 53
	GT  shift 54
	RPAREN  shift 58
	.  error


state 43
	exp : exp AND . exp  (37)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 59


state 44
	exp : exp OR . exp  (38)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 60


state 45
	exp : exp PLUS . exp  (24)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 61


state 46
	exp : exp MINUS . exp  (25)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 62


state 47
	exp : exp TIMES . exp  (26)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 63


state 48
	exp : exp DIV . exp  (27)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 64


state 49
	exp : exp MOD . exp  (28)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 65


state 50
	exp : exp EQ . exp  (30)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 66


state 51
	exp : exp LEQ . exp  (31)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 67


state 52
	exp : exp LT . exp  (32)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 68


state 53
	exp : exp GEQ . exp  (33)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 69


state 54
	exp : exp GT . exp  (34)

	TRUE  shift 27
	FALSE  shift 28
	NOT  shift 29
	MINUS  shift 30
	LPAREN  shift 31
	VAR  shift 32
	NUMBER  shift 33
	.  error

	exp  goto 70


state 55
	com : IF LPAREN exp RPAREN . com ELSE com  (10)
	com : IF LPAREN exp RPAREN . combr ELSE com  (11)
	combr : IF LPAREN exp RPAREN . com ELSE combr  (19)
	combr : IF LPAREN exp RPAREN . combr ELSE combr  (20)

	LBRACE  shift 3
	SKIP  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	VAR  shift 8
	INT  shift 9
	BOOL  shift 10
	.  error

	com  goto 71
	combr  goto 72


state 56
	com : WHILE LPAREN exp RPAREN . com  (8)
	combr : WHILE LPAREN exp RPAREN . combr  (17)

	LBRACE  shift 3
	SKIP  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	VAR  shift 8
	INT  shift 9
	BOOL  shift 10
	.  error

	com  goto 73
	combr  goto 74


state 57
	com : FOR LPAREN exp RPAREN . com  (9)
	combr : FOR LPAREN exp RPAREN . combr  (18)

	LBRACE  shift 3
	SKIP  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	VAR  shift 8
	INT  shift 9
	BOOL  shift 10
	.  error

	com  goto 75
	combr  goto 76


58: reduce/reduce conflict (reduce 23, reduce 35) on AND
58: reduce/reduce conflict (reduce 23, reduce 35) on OR
58: reduce/reduce conflict (reduce 23, reduce 35) on PLUS
58: reduce/reduce conflict (reduce 23, reduce 35) on MINUS
58: reduce/reduce conflict (reduce 23, reduce 35) on TIMES
58: reduce/reduce conflict (reduce 23, reduce 35) on DIV
58: reduce/reduce conflict (reduce 23, reduce 35) on MOD
58: reduce/reduce conflict (reduce 23, reduce 35) on EQ
58: reduce/reduce conflict (reduce 23, reduce 35) on LEQ
58: reduce/reduce conflict (reduce 23, reduce 35) on LT
58: reduce/reduce conflict (reduce 23, reduce 35) on GEQ
58: reduce/reduce conflict (reduce 23, reduce 35) on GT
58: reduce/reduce conflict (reduce 23, reduce 35) on RPAREN
58: reduce/reduce conflict (reduce 23, reduce 35) on RBRACE
58: reduce/reduce conflict (reduce 23, reduce 35) on COMP
58: reduce/reduce conflict (reduce 23, reduce 35) on ELSE
58: reduce/reduce conflict (reduce 23, reduce 35) on EOL
state 58
	exp : LPAREN exp RPAREN .  (23)
	exp : LPAREN exp RPAREN .  (35)

	.  reduce 23


state 59
	exp : exp . PLUS exp  (24)
	exp : exp . MINUS exp  (25)
	exp : exp . TIMES exp  (26)
	exp : exp . DIV exp  (27)
	exp : exp . MOD exp  (28)
	exp : exp . EQ exp  (30)
	exp : exp . LEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . GEQ exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . AND exp  (37)
	exp : exp AND exp .  (37)
	exp : exp . OR exp  (38)

	.  reduce 37


state 60
	exp : exp . PLUS exp  (24)
	exp : exp . MINUS exp  (25)
	exp : exp . TIMES exp  (26)
	exp : exp . DIV exp  (27)
	exp : exp . MOD exp  (28)
	exp : exp . EQ exp  (30)
	exp : exp . LEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . GEQ exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . AND exp  (37)
	exp : exp . OR exp  (38)
	exp : exp OR exp .  (38)

	.  reduce 38


state 61
	exp : exp . PLUS exp  (24)
	exp : exp PLUS exp .  (24)
	exp : exp . MINUS exp  (25)
	exp : exp . TIMES exp  (26)
	exp : exp . DIV exp  (27)
	exp : exp . MOD exp  (28)
	exp : exp . EQ exp  (30)
	exp : exp . LEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . GEQ exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . AND exp  (37)
	exp : exp . OR exp  (38)

	AND  shift 43
	OR  shift 44
	TIMES  shift 47
	DIV  shift 48
	PLUS  reduce 24
	MINUS  reduce 24
	MOD  reduce 24
	EQ  reduce 24
	LEQ  reduce 24
	LT  reduce 24
	GEQ  reduce 24
	GT  reduce 24
	RPAREN  reduce 24
	RBRACE  reduce 24
	COMP  reduce 24
	ELSE  reduce 24
	EOL  reduce 24


state 62
	exp : exp . PLUS exp  (24)
	exp : exp . MINUS exp  (25)
	exp : exp MINUS exp .  (25)
	exp : exp . TIMES exp  (26)
	exp : exp . DIV exp  (27)
	exp : exp . MOD exp  (28)
	exp : exp . EQ exp  (30)
	exp : exp . LEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . GEQ exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . AND exp  (37)
	exp : exp . OR exp  (38)

	AND  shift 43
	OR  shift 44
	TIMES  shift 47
	DIV  shift 48
	PLUS  reduce 25
	MINUS  reduce 25
	MOD  reduce 25
	EQ  reduce 25
	LEQ  reduce 25
	LT  reduce 25
	GEQ  reduce 25
	GT  reduce 25
	RPAREN  reduce 25
	RBRACE  reduce 25
	COMP  reduce 25
	ELSE  reduce 25
	EOL  reduce 25


state 63
	exp : exp . PLUS exp  (24)
	exp : exp . MINUS exp  (25)
	exp : exp . TIMES exp  (26)
	exp : exp TIMES exp .  (26)
	exp : exp . DIV exp  (27)
	exp : exp . MOD exp  (28)
	exp : exp . EQ exp  (30)
	exp : exp . LEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . GEQ exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . AND exp  (37)
	exp : exp . OR exp  (38)

	AND  shift 43
	OR  shift 44
	PLUS  reduce 26
	MINUS  reduce 26
	TIMES  reduce 26
	DIV  reduce 26
	MOD  reduce 26
	EQ  reduce 26
	LEQ  reduce 26
	LT  reduce 26
	GEQ  reduce 26
	GT  reduce 26
	RPAREN  reduce 26
	RBRACE  reduce 26
	COMP  reduce 26
	ELSE  reduce 26
	EOL  reduce 26


state 64
	exp : exp . PLUS exp  (24)
	exp : exp . MINUS exp  (25)
	exp : exp . TIMES exp  (26)
	exp : exp . DIV exp  (27)
	exp : exp DIV exp .  (27)
	exp : exp . MOD exp  (28)
	exp : exp . EQ exp  (30)
	exp : exp . LEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . GEQ exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . AND exp  (37)
	exp : exp . OR exp  (38)

	AND  shift 43
	OR  shift 44
	PLUS  reduce 27
	MINUS  reduce 27
	TIMES  reduce 27
	DIV  reduce 27
	MOD  reduce 27
	EQ  reduce 27
	LEQ  reduce 27
	LT  reduce 27
	GEQ  reduce 27
	GT  reduce 27
	RPAREN  reduce 27
	RBRACE  reduce 27
	COMP  reduce 27
	ELSE  reduce 27
	EOL  reduce 27


state 65
	exp : exp . PLUS exp  (24)
	exp : exp . MINUS exp  (25)
	exp : exp . TIMES exp  (26)
	exp : exp . DIV exp  (27)
	exp : exp . MOD exp  (28)
	exp : exp MOD exp .  (28)
	exp : exp . EQ exp  (30)
	exp : exp . LEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . GEQ exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . AND exp  (37)
	exp : exp . OR exp  (38)

	AND  shift 43
	OR  shift 44
	TIMES  shift 47
	DIV  shift 48
	PLUS  reduce 28
	MINUS  reduce 28
	MOD  reduce 28
	EQ  reduce 28
	LEQ  reduce 28
	LT  reduce 28
	GEQ  reduce 28
	GT  reduce 28
	RPAREN  reduce 28
	RBRACE  reduce 28
	COMP  reduce 28
	ELSE  reduce 28
	EOL  reduce 28


state 66
	exp : exp . PLUS exp  (24)
	exp : exp . MINUS exp  (25)
	exp : exp . TIMES exp  (26)
	exp : exp . DIV exp  (27)
	exp : exp . MOD exp  (28)
	exp : exp . EQ exp  (30)
	exp : exp EQ exp .  (30)
	exp : exp . LEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . GEQ exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . AND exp  (37)
	exp : exp . OR exp  (38)

	AND  shift 43
	OR  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIV  shift 48
	MOD  shift 49
	RPAREN  reduce 30
	RBRACE  reduce 30
	COMP  reduce 30
	ELSE  reduce 30
	EOL  reduce 30


state 67
	exp : exp . PLUS exp  (24)
	exp : exp . MINUS exp  (25)
	exp : exp . TIMES exp  (26)
	exp : exp . DIV exp  (27)
	exp : exp . MOD exp  (28)
	exp : exp . EQ exp  (30)
	exp : exp . LEQ exp  (31)
	exp : exp LEQ exp .  (31)
	exp : exp . LT exp  (32)
	exp : exp . GEQ exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . AND exp  (37)
	exp : exp . OR exp  (38)

	AND  shift 43
	OR  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIV  shift 48
	MOD  shift 49
	RPAREN  reduce 31
	RBRACE  reduce 31
	COMP  reduce 31
	ELSE  reduce 31
	EOL  reduce 31


state 68
	exp : exp . PLUS exp  (24)
	exp : exp . MINUS exp  (25)
	exp : exp . TIMES exp  (26)
	exp : exp . DIV exp  (27)
	exp : exp . MOD exp  (28)
	exp : exp . EQ exp  (30)
	exp : exp . LEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp LT exp .  (32)
	exp : exp . GEQ exp  (33)
	exp : exp . GT exp  (34)
	exp : exp . AND exp  (37)
	exp : exp . OR exp  (38)

	AND  shift 43
	OR  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIV  shift 48
	MOD  shift 49
	RPAREN  reduce 32
	RBRACE  reduce 32
	COMP  reduce 32
	ELSE  reduce 32
	EOL  reduce 32


state 69
	exp : exp . PLUS exp  (24)
	exp : exp . MINUS exp  (25)
	exp : exp . TIMES exp  (26)
	exp : exp . DIV exp  (27)
	exp : exp . MOD exp  (28)
	exp : exp . EQ exp  (30)
	exp : exp . LEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . GEQ exp  (33)
	exp : exp GEQ exp .  (33)
	exp : exp . GT exp  (34)
	exp : exp . AND exp  (37)
	exp : exp . OR exp  (38)

	AND  shift 43
	OR  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIV  shift 48
	MOD  shift 49
	RPAREN  reduce 33
	RBRACE  reduce 33
	COMP  reduce 33
	ELSE  reduce 33
	EOL  reduce 33


state 70
	exp : exp . PLUS exp  (24)
	exp : exp . MINUS exp  (25)
	exp : exp . TIMES exp  (26)
	exp : exp . DIV exp  (27)
	exp : exp . MOD exp  (28)
	exp : exp . EQ exp  (30)
	exp : exp . LEQ exp  (31)
	exp : exp . LT exp  (32)
	exp : exp . GEQ exp  (33)
	exp : exp . GT exp  (34)
	exp : exp GT exp .  (34)
	exp : exp . AND exp  (37)
	exp : exp . OR exp  (38)

	AND  shift 43
	OR  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIV  shift 48
	MOD  shift 49
	RPAREN  reduce 34
	RBRACE  reduce 34
	COMP  reduce 34
	ELSE  reduce 34
	EOL  reduce 34


state 71
	com : IF LPAREN exp RPAREN com . ELSE com  (10)
	combr : IF LPAREN exp RPAREN com . ELSE combr  (19)

	ELSE  shift 77
	.  error


state 72
	com : IF LPAREN exp RPAREN combr . ELSE com  (11)
	combr : IF LPAREN exp RPAREN combr . ELSE combr  (20)

	ELSE  shift 78
	.  error


state 73
	com : WHILE LPAREN exp RPAREN com .  (8)

	.  reduce 8


state 74
	combr : WHILE LPAREN exp RPAREN combr .  (17)

	.  reduce 17


state 75
	com : FOR LPAREN exp RPAREN com .  (9)

	.  reduce 9


state 76
	combr : FOR LPAREN exp RPAREN combr .  (18)

	.  reduce 18


state 77
	com : IF LPAREN exp RPAREN com ELSE . com  (10)
	combr : IF LPAREN exp RPAREN com ELSE . combr  (19)
